--- a/src/components/showPictureOfDay/ShowPictureOfDay.css
+++ b/src/components/showPictureOfDay/ShowPictureOfDay.css
@@ -3,8 +3,6 @@
   height: 40px;
   margin: 100px auto;
 }
-/* ???????????????????????????????????????????? */
-
 .sk-cube-grid .sk-cube {
   width: 33%;
   height: 33%;
@@ -59,4 +57,7 @@
     -webkit-transform: scale3D(0, 0, 1);
             transform: scale3D(0, 0, 1);
   } 
+}
+.wrapper{
+  height:100vh!important
 }
